syntax = "proto3";
option optimize_for = LITE_RUNTIME;
option csharp_namespace = "MMKiwi.CtaTracker.Model.Protobuf";
import "ErrorList.proto";
import "Stop.proto";

message PredictionResponse
{
  oneof response {
    RouteList result = 1;
    ErrorList error = 2;
  }
  message RouteList
  {
    repeated Stop stops = 1;
  }

}