syntax = "proto3";
option optimize_for = LITE_RUNTIME;
option csharp_namespace = "MMKiwi.CtaTracker.Model.Protobuf";
import "Prediction.proto";

message Route
{
  string id = 1;
  string name = 2;
  uint32 color = 3;
  string designation = 4;
  
  repeated RouteDirection directions = 5;
}

message RouteDirection
{
  string direction = 1;
  repeated Prediction predictions = 2;
}